src/BadScript.Tests/tests/passing/types/function/hooks/releaseHook.bs
pass = true
function f()
{
	
}

function fHook()
{
	pass = false
}

f.Hook(fHook)
f.ReleaseHook(fHook)
f()

return pass