src/BadScript.Tests/tests/failing/invalid-operations/invalid_function_hook.bs
function f()
{
	
}

f.Hook(123)